gcp/busybox-dns-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: mongo
spec:
  containers:
  - name: busybox
    image: busybox:1.28
    command:
      - sleep
      - "3600"
    resources:
      requests:
        cpu: "50m"
      limits:
        cpu: "100m"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
