gcp/curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl 
spec:
  containers:
  - name: curl
    #image: radial/busyboxplus:curl
    image: byrnedo/alpine-curl
