gcp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-service
          image: gcr.io/sparkarabic-251004/auth-service:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /app/config
          ports:
            - containerPort: 8011
      volumes:
        - name: config
          emptyDir: {}
