gcp/mongo-loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-front
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb
