gcp/echo-ingress-static-ip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
  labels:
    app: hello
spec:
  backend:
    serviceName: echo-service
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: echo-server
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb-lb
  labels:
    app: hello
spec:
  type: LoadBalancer 
  selector:
    app: echo-server
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
