gcp/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sparkarabic
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: echo-service
            servicePort: 80
